syntax = "proto3";

import "google/protobuf/timestamp.proto";

package redis;
option go_package = "ms/gateway/pb";
import "auth.proto";

service RedisService {
    rpc GetSession(GetSessionRequest) returns (GetSessionResponse);
    rpc CreateSession(CreateSessionRequest) returns (CreateSessionResponse);
    rpc ValidateSession(AuthValidateSessionRequest) returns (AuthValidateSessionResponse);
    rpc DeleteSession(DeleteSessionRequest) returns (DeleteSessionResponse);
}

message CreateSessionRequest {
    auth.Session session = 1;
}

message DeleteSessionRequest {
    string sessionId = 1;
}

message DeleteSessionResponse {
    bool success = 1;
    string message = 2;
}

message AuthValidateSessionRequest {
    string sessionId = 1;
}

message AuthValidateSessionResponse {
    auth.Session session = 1;
    string message = 2;
    bool success = 3;
}

message CreateSessionResponse {
    auth.Session session = 1;
    string message = 2;
    bool success = 3;
}

message GetSessionRequest {
    string sessionId = 1;
}

message GetSessionResponse {
    auth.Session session = 1;
}